# cobol-moderniser

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LIMITATIONS.md  README.md  docker-compose.yml  generate_extended_tests.py  pyproject.toml  requirements.txt  setup.py
agents/: audit_reporter.py  code_writer.py  cost_tracker.py  externaliser.py  logic_extractor.py  parser.py  simplifier.py  test_generator.py  validator.py
cobol_moderniser/: __init__.py  cli.py
demo/: run_pipeline.py
docs/: docker.md
output/: add migrated Python mortgage calculator  business_rules.json  business_rules.md  business_rules.yaml  cost_report.json  simplification_report.md  validation_report.md
sample_cobol/: MORTGDEF.cpy  mortgage_calc.cbl
sample_cobol/copybooks/: COMMONERR.cpy
tests/: run_parser_tests.py  test_parser.py
